// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list item add dialog > opened > on form cancel > should close 1`] = `
<body
  style="margin-right: 8px; --scrollbar-width: 1024px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-13"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="closed"
      id="bits-11"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`list item add dialog > opened > on form success > should close 1`] = `
<body
  style="margin-right: 8px; --scrollbar-width: 1024px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-27"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="closed"
      id="bits-25"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`list item add dialog > opened > should be displayed 1`] = `
<body
  style="margin-right: 8px; --scrollbar-width: 1024px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <div
      class="modal-backdrop"
      data-dialog-overlay=""
      data-state="open"
      id="bits-5"
      style="pointer-events: auto;"
    >
      <!---->
    </div>
    
    
    
    <!---->
     
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
     
    <div
      aria-labelledby="bits-9"
      aria-modal="true"
      class="modal-box overflow-y-auto p-6"
      data-dialog-content=""
      data-state="open"
      id="bits-6"
      interactoutsidebehavior="close"
      role="dialog"
      style="pointer-events: auto; outline: undefined;"
      tabindex="-1"
    >
      <div
        class="flex items-start prose"
      >
        <!---->
        <div
          aria-level="2"
          class="mt-0 mr-auto"
          data-dialog-title=""
          data-state="open"
          id="bits-9"
          role="heading"
        >
          Добавить желание
          <!---->
        </div>
        
        <!---->
         
        <!---->
        <button
          class="cursor-pointer"
          data-dialog-close=""
          data-state="open"
          id="bits-10"
          tabindex="0"
        >
          <svg
            class="lucide-icon lucide lucide-x"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <!---->
            <path
              d="M18 6 6 18"
            >
              
            </path>
            
            <!---->
            <path
              d="m6 6 12 12"
            >
              
            </path>
            
            <!---->
            <!---->
            
            <!---->
          </svg>
          <!---->
        </button>
        
        <!---->
      </div>
       
      <!---->
      <!---->
    </div>
    
    
    
    
    
    
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-6"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="open"
      id="bits-4"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`list item add dialog > should be displayed closed 1`] = `
<body>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="closed"
      id="bits-1"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;
